@@ -127,6 +127,7 @@ protected slots:
     void slotAddAliasClicked();
     void slotRemoveAliasClicked();
     void refreshAliasModes();
+    void updateAliasModeName(QString oldName, QString newName);
     void refreshAliasModeChannels();
 
 protected:
